src/site/styles/custom-style.scss
body {
  --note-icon-1: url(/img/git-commit.svg);
  --note-icon-fallback: url(/img/default-note-icon.svg);

  header > h1 {
    font-size: 32px;
    font-weight: bold;
  }

  .banner {
    max-width: 1000px;
    width: 80%;
    display: block;
    margin: 0 auto 10px auto;
    border: 2px solid black;
  }

  .search-button {
    border-radius: 10px;
  }

  .cm-s-obsidian {
      .table-wrapper {
          overflow-x: scroll;
      }

      picture {
          max-width: 100%;
          height: auto;

          img {
              width: 100%;
              height: auto;
          }
      }
  }

  .cm-s-obsidian > *[id] {
      position: relative;
      cursor: pointer;
      &:hover {
          border: 1px dotted;
          margin-left: -10px;
          margin-right: -10px;
          padding: 10px;
      }
      &:hover::before {
          content: "Double-click to copy link";
          position: absolute;
          right: 0;
          top: -1.55em;
          font-weight: normal;
          font-size: 12px;
          font-variant: initial;
          letter-spacing: 0.24px;
          line-height: 14px;
      }
  }

  #floating-control {
      position: fixed;
      bottom: 1vmax;
      right: 1vmax;
      font-size: 24px;
      z-index: 999999;
      display: flex;
      flex-direction: row;
      justify-content: flex-end;
      gap: 10px;

      .svg-icon,
      i {
          cursor: pointer;
          height: 24px;
          width: auto;
      }

      #theme-switch {
          .light {
              display: none;
          }

          .dark {
              display: none;
          }

          .auto {
              display: none;
          }
      }

      #theme-switch.light {
          .light {
              display: inline;
          }
      }

      #theme-switch.dark {
          .dark {
              display: inline;
          }
      }

      #theme-switch.auto {
          .auto {
              display: inline;
          }
      }
  }

  .sponsor-list {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 20px;
  }
  
  .sponsor-logo {
    display: block;
    text-align: center;
    max-width: 100px;
  }
  
}

.content {
    max-width: 1000px;
}

